villa_navi_service update

--- a/villa_navi_service/CMakeLists.txt
+++ b/villa_navi_service/CMakeLists.txt
@@ -14,8 +14,6 @@ find_package(catkin REQUIRED COMPONENTS
   std_msgs
   std_srvs
   tf
-  pcl_ros
-  pcl_conversions
 )
 
 #find_package(Eigen3 REQUIRED)
@@ -31,6 +29,7 @@ find_package(PCL 1.7 REQUIRED)
 add_service_files(
    FILES
    GoTargetPos.srv
+   GoTargetName.srv
 )
 
 generate_messages(
@@ -58,10 +57,29 @@ catkin_package(
 
 include_directories(
   ${catkin_INCLUDE_DIRS}
-  ${PCL_INCLUDE_DIRS}
 )
 
 SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
 add_executable(nav_service_test src/service_test.cpp ${SOURCES})
-target_link_libraries(nav_service_test ${catkin_LIBRARIES} ${PCL_LIBRARIES})
+target_link_libraries(nav_service_test ${catkin_LIBRARIES})
+add_dependencies(nav_service_test ${catkin_EXPORTED_TARGETS})
+
+
+add_executable(client_test src/service_client.cpp ${SOURCES})
+target_link_libraries(client_test ${catkin_LIBRARIES} )
+add_dependencies(client_test ${catkin_EXPORTED_TARGETS})
+
+add_executable(waypoint_test src/waypoint_client.cpp ${SOURCES})
+target_link_libraries(waypoint_test ${catkin_LIBRARIES})
+add_dependencies(waypoint_test  ${catkin_EXPORTED_TARGETS})
+
+add_executable(waypoint_server src/waypoint_server_node.cpp ${SOURCES})
+target_link_libraries(waypoint_server ${catkin_LIBRARIES})
+add_dependencies(waypoint_server  ${catkin_EXPORTED_TARGETS})
+
+install(DIRECTORY scripts/
+    DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
+    USE_SOURCE_PERMISSIONS
+)
+
