added pcl to header file

--- a/villa_navi_service/CMakeLists.txt
+++ b/villa_navi_service/CMakeLists.txt
@@ -40,7 +40,8 @@ generate_messages(
 
 include_directories(${EIGEN3_INCLUDE_DIR})
 include_directories(include)
-include_directories(src)
+include_directories(src
+		${PCL_INCLUDE_DIRS})
 
 catkin_package(
   INCLUDE_DIRS include
