--- a/villa_navi_service/CMakeLists.txt
+++ b/villa_navi_service/CMakeLists.txt
@@ -64,20 +64,20 @@ SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
 add_executable(nav_service_test src/service_test.cpp ${SOURCES})
 target_link_libraries(nav_service_test ${catkin_LIBRARIES})
-add_dependencies(nav_service_test ${catkin_EXPORTED_TARGETS})
+add_dependencies(nav_service_test ${catkin_EXPORTED_TARGETS} villa_navi_service_gencpp)
 
 
 add_executable(client_test src/service_client.cpp ${SOURCES})
 target_link_libraries(client_test ${catkin_LIBRARIES} )
-add_dependencies(client_test ${catkin_EXPORTED_TARGETS})
+add_dependencies(client_test ${catkin_EXPORTED_TARGETS} villa_navi_service_gencpp)
 
 add_executable(waypoint_test src/waypoint_client.cpp ${SOURCES})
 target_link_libraries(waypoint_test ${catkin_LIBRARIES})
-add_dependencies(waypoint_test  ${catkin_EXPORTED_TARGETS})
+add_dependencies(waypoint_test  ${catkin_EXPORTED_TARGETS} villa_navi_service_gencpp)
 
 add_executable(waypoint_server src/waypoint_server_node.cpp ${SOURCES})
 target_link_libraries(waypoint_server ${catkin_LIBRARIES})
-add_dependencies(waypoint_server  ${catkin_EXPORTED_TARGETS})
+add_dependencies(waypoint_server  ${catkin_EXPORTED_TARGETS} villa_navi_service_gencpp)
 
 install(DIRECTORY scripts/
     DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
